# cmake-examples

./: .gitignore  README.md
01basic/: CMakeLists.txt
01basic/src/: main.cpp
02dynamic_lib/: CMakeLists.txt
02static_lib/: CMakeLists.txt
03thirdpart_lib/: CMakeLists.txt  README.md
04_find_package/: CMakeLists.txt  README.md
basic/src/: mymath.cpp
cmake-practice/t1/: CMakeLists.txt  cmake.cpp
cmake-practice/t2/: CMakeLists.txt
cmake-practice/t2/src/: CMakeLists.txt
cmake-practice/t3/: CMakeLists.txt
cmake-practice/t3/lib/: CMakeLists.txt  hello.cpp
cmake-practice/t4/: CMakeLists.txt
cmake-practice/t4/src/: CMakeLists.txt  main.cpp
cmake-practice/t5/: CMakeLists.txt
cmake-practice/t5/src/: CMakeLists.txt  main.cpp
cmake-practice/t6/: CMakeLists.txt
cmake-practice/t6/cmake/: Findhello.cmake
cmake-practice/t6/src/: CMakeLists.txt
dynamic_lib/include/: mymath.h
thirdpart_lib/: CMakeLists copy.txt  README.md
thirdpart_lib/src/: main.cpp
