PROJECT(HELLO)
SET(SRC_LIST main.c)
MESSAGE(STATUS "This is BINARY dir " ${HELLO_BINARY_DIR})
MESSAGE(STATUS "This is SOURCE dir " ${HELLO_SOURCE_DIR})
# MESSAGE(SEND_ERROR "This is SOURCE dir " ${PROJECT_SOURCE_DIR}) # SEND_ERROR/STATUS/FATAL_ERROR
# MESSAGE(FATAL_ERROR "This is SOURCE dir " ${PROJECT_SOURCE_DIR})
ADD_EXECUTABLE(hello ${SRC_LIST})